--- a/3.html
+++ b/3.html
@@ -3,6 +3,15 @@
     <head>
       <title>Hydrangea</title>
       <meta charset="utf-8">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8WVL20K6DB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8WVL20K6DB');
+</script>
     </head>
     <body>
       <div style="text-align:center"><h1><a href="index.html">식물</a></h1></div>
