--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
       <title>Plant</title>
       <meta charset="utf-8">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8WVL20K6DB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8WVL20K6DB');
+</script>
     </head>
     <body>
       <div style="text-align:center"><h1><a href="index.html">식물</h1></a></div>
@@ -11,5 +20,19 @@
           <li><a href="2.html">제라늄</li></a>
           <li><a href="3.html">수국</li></a>
       </ol>
-      <div style="text-align:center"><img src="index.webp"></div>
+      <div style="text-align:center"><img src="index.webp">
+      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/o53_csOQI6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p></div>
+      <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/61c4801e80b2296cfdd31533/1fnjp8u32';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
     </body>
