--- a/1.html
+++ b/1.html
@@ -12,21 +12,44 @@
 
   gtag('config', 'G-8WVL20K6DB');
 </script>
+    <style>
+        a {
+            color:pink;
+            text-decoration: none;
+          }
+        h1{
+            font-size: 250%;
+          }
+        ul {
+          list-style: none;
+          text-align: left; /* Remove default bullets */
+        }
+
+        ul li::before {
+          content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+          color: pink; /* Change the color */
+          font-weight: bold; /* If you want it to be bold */
+          display: inline-block; /* Needed to add space between the bullet and the text */
+          width: 1em; /* Also needed for space (tweak if needed) */
+          margin-left: -1em; /* Also needed for space (tweak if needed) */
+        }
+        body{text-align: center;}
+    </style>
     </head>
     <body>
       <div style="text-align:center"><h1><a href="index.html">식물</a></h1></div>
-      <ol>
-          <li><a href="1.html">베고니아</a></li>
+      <ul>
+          <li><a href="1.html" style="color:red; text-decoration:underline">베고니아</a></li>
           <li><a href="2.html">제라늄</a></li>
           <li><a href="3.html">수국</a></li>
-      </ol>
-      <div style="text-align:center"><h2>베고니아</h2></div>
-      <div style="text-align:center"><p style="margin-top:30px;">베고니아속(begonia)은 베고니아과에 속하는 꽃식물의 한 속(屬)이다.</p></div>
-      <div style="text-align:center"><p><a href="https://en.wikipedia.org/wiki/Begonia" target="_blank" title="베고니아란?">“베고니아”<a>는 이 속에 속한 모든 종의 일반명 또는 속명이다.</p></div>
-      <div style="text-align:center"><p>어원은 프랑스의 속령인 아이티의 전임 총독이었던 식물학 후원자인<br>
+      </ul>
+      <h2>베고니아</h2></div>
+      <p style="margin-top:30px;">베고니아속(begonia)은 베고니아과에 속하는 꽃식물의 한 속(屬)이다.</p>
+      <p><a href="https://en.wikipedia.org/wiki/Begonia" target="_blank" title="베고니아란?">“베고니아”</a>는 이 속에 속한 모든 종의 일반명 또는 속명이다.</p>
+      <p>어원은 프랑스의 속령인 아이티의 전임 총독이었던 식물학 후원자인<br>
       미첼 베곤(Michel Begon)의 이름을 따서 찰스 플루미어(Charles Plumier)에 의해
-      이름 지어졌다.</p></div>
-      <div style="text-align:center"><img src="web1.jpg" width="25%"></div>
+      이름 지어졌다.</p>
+      ign:center"><img src="web1.jpg" width="25%">
       <p><div id="disqus_thread"></div>
 <script>
     /**
