--- a/1.html
+++ b/1.html
@@ -49,7 +49,7 @@
       <p>어원은 프랑스의 속령인 아이티의 전임 총독이었던 식물학 후원자인<br>
       미첼 베곤(Michel Begon)의 이름을 따서 찰스 플루미어(Charles Plumier)에 의해
       이름 지어졌다.</p>
-      ign:center"><img src="web1.jpg" width="25%">
+      <img src="web1.jpg" width="25%">
       <p><div id="disqus_thread"></div>
 <script>
     /**
