--- a/3.html
+++ b/3.html
@@ -12,42 +12,23 @@
 
   gtag('config', 'G-8WVL20K6DB');
 </script>
-<style>
-  a {
-    color:pink;
-    text-decoration: none;
-  }
-  h1{
-      font-size: 250%;
-  }
-  ul {
-    list-style: none; /* Remove default bullets */
-    text-align: left;
-  }
-
-  ul li::before {
-    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-    color: pink; /* Change the color */
-    font-weight: bold; /* If you want it to be bold */
-    display: inline-block; /* Needed to add space between the bullet and the text */
-    width: 1em; /* Also needed for space (tweak if needed) */
-    margin-left: -1em; /* Also needed for space (tweak if needed) */
-  }
-  body{text-align: center;}
-</style>
+   <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <h1><a href="index.html">식물</a></h1>
-
+      <div id="grid">
       <ul>
           <li><a href="1.html">베고니아</a></li>
           <li><a href="2.html">제라늄</a></li>
           <li><a href="3.html" style="color:red; text-decoration:underline">수국</a></li>
       </ul>
+      <div id="article">
       <h2>수국</h2>
           <p style="margin-top:30px"><a href="https://ko.wikipedia.org/wiki/%EC%88%98%EA%B5%AD" target="_blank" title="수국이란?">수국(水菊)</a>은 동아시아 원산의 갈잎 떨기나무이다.</p>
           <p>수국 꽃송이는 분단화 또는 수구화라고 불리기고 하고,<br>
              백거이와 관련되어 자양화나 팔선화라고 하기도 한다.</p>
       <img src="web3.jfif">
+    </div>
+  </div>
 
     </body>
