--- a/2.html
+++ b/2.html
@@ -12,40 +12,22 @@
 
   gtag('config', 'G-8WVL20K6DB');
 </script>
-<style>
-  a{
-    color:pink;
-    text-decoration: none;
-  }
-  h1{
-      font-size: 250%;
-    }
-      ul {
-        list-style: none; /* Remove default bullets */
-        text-align: left;
-      }
-
-      ul li::before {
-        content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-        color: pink; /* Change the color */
-        font-weight: bold; /* If you want it to be bold */
-        display: inline-block; /* Needed to add space between the bullet and the text */
-        width: 1em; /* Also needed for space (tweak if needed) */
-        margin-left: -1em; /* Also needed for space (tweak if needed) */
-      }
-      body {text-align: center;}
-</style>
+     <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <h1><a href="index.html">식물</a></h1>
+<div id="grid">
       <ul>
           <li><a href="1.html">베고니아</a></li>
           <li><a href="2.html" style="color:red; text-decoration:underline">제라늄</a></li>
           <li><a href="3.html">수국</a></li>
       </ul>
+      <div id="article">
       <h2>제라늄</h2>
       <p style="margin-top:30px"><a href="https://ko.wikipedia.org/wiki/%EC%A0%9C%EB%9D%BC%EB%8A%84%EC%86%8D" target="_blank" title="제라늄이란?">제라늄속(geranium屬, 학명: Pelargonium 펠라르고니움)</a>은 쥐손이풀과의 속이다.</p>
       <p>여러해살이 초본식물, 관목 또는 다육 식물 300여 종으로 이루어져 있으며,<br>
       아시아, 오세아니아, 아프리카 등지에 널리 분포한다.</p>
       <img src="web2.jpg" width="25%">
+    </div>
+  </div>
     </body>
