--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@
           <li><a href="3.html">수국</a></li>
       </ul>
       <div id="main">
-      <img src="index.webp">
-      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/o53_csOQI6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-    </div>
+    <div id="image" > <img src="index.webp">  </div>
+      <div id="video">
+        <iframe width="510" height="340" src="https://www.youtube.com/embed/o53_csOQI6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
   </div>
+  </div>
+</div>
       <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
