--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
           <li><a href="3.html">수국</a></li>
       </ul>
       <div id="main">
-    <div id="image" > <img src="index.webp">  </div>
-      <div id="video">
-        <iframe width="510" height="340" src="https://www.youtube.com/embed/o53_csOQI6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="class"><img src="index.webp"> </div>
+        <div class="class"><iframe width="510" height="340" src="https://www.youtube.com/embed/o53_csOQI6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
 
   </div>
   </div>
