--- a/1.html
+++ b/1.html
@@ -15,16 +15,16 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      <div id="button">
-      <input id="ND" type="button" value="night" onclick="
-        if(document.querySelector('#ND').value==='night'){
-          document.querySelector('body').style.backgroundColor ='black';
-          document.querySelector('body').style.color='white';
-          document.querySelector('#ND').value = 'day';}
+      <input  type="button" value="night" onclick="
+      var target=document.querySelector('body');
+        if(this.value==='night'){
+          target.style.backgroundColor ='black';
+          target.style.color='white';
+          this.value = 'day';}
           else{
-            document.querySelector('body').style.backgroundColor ='white';
-            document.querySelector('body').style.color='black';
-            document.querySelector('#ND').value='night';
+            target.style.backgroundColor ='white';
+            target.style.color='black';
+          this.value='night';
         }
         ">
       </div>
