--- a/index.html
+++ b/index.html
@@ -28,20 +28,19 @@
       ">
     -->
       <!--if문활용 버튼 한개-->
-        <input id="ND" type="button" value="night" onclick="
-        if(document.querySelector('#ND').value==='night'){
-          document.querySelector('body').style.backgroundColor ='black';
-          document.querySelector('body').style.color='white';
-          document.querySelector('#ND').value = 'day';}
+      <input  type="button" value="night" onclick="
+      var target=document.querySelector('body');
+        if(this.value==='night'){
+          target.style.backgroundColor ='black';
+          target.style.color='white';
+          this.value = 'day';}
           else{
-            document.querySelector('body').style.backgroundColor ='white';
-            document.querySelector('body').style.color='black';
-            document.querySelector('#ND').value='night';
+            target.style.backgroundColor ='white';
+            target.style.color='black';
+          this.value='night';
         }
         ">
-
       </div>
-
           <h1><a href="index.html" style ="text-decoration:underline">식물</h1></a>
 
     <div id="grid">
