--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
  <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
-      <div id="button">
       <!--버튼 두개
       <input type ="button" value="night" onclick="
       document.querySelector('body').style.backgroundColor='black';
@@ -33,14 +31,28 @@
         if(this.value==='night'){
           target.style.backgroundColor ='black';
           target.style.color='white';
-          this.value = 'day';}
+          this.value = 'day';
+
+        var alist =document.querySelectorAll('a');
+        var i=0;
+        while(i < alist.length){
+          alist[i].style.color='white';
+          i++;
+        }
+      }
           else{
             target.style.backgroundColor ='white';
             target.style.color='black';
-          this.value='night';
-        }
+            this.value='night';
+
+            var alist =document.querySelectorAll('a');
+            var i=0;
+            while(i < alist.length){
+            alist[i].style.color='pink';
+            i++;
+           }
+          }
         ">
-      </div>
           <h1><a href="index.html" style ="text-decoration:underline">식물</h1></a>
 
     <div id="grid">
