--- a/1.html
+++ b/1.html
@@ -2,6 +2,8 @@
 <html>
     <head>
       <title>Begonia</title>
+      <script src="colors.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
       <meta charset="utf-8">
       <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8WVL20K6DB"></script>
@@ -15,35 +17,11 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      <input  type="button" value="night" onclick="
-      var target=document.querySelector('body');
-        if(this.value==='night'){
-          target.style.backgroundColor ='black';
-          target.style.color='white';
-          this.value = 'day';
-
-      var alist =document.querySelectorAll('a');
-      var i=0;
-      while(i < alist.length){
-      alist[i].style.color='white';
-      i++;}
-      }
-      else{
-        target.style.backgroundColor ='white';
-        target.style.color='black';
-        this.value='night';
-
-       var alist =document.querySelectorAll('a');
-       var i=0;
-       while(i < alist.length){
-       alist[i].style.color='pink';
-       i++;}
-        }
-        ">
+      <input  type="button" value="night" onclick="nightDayHandler(this)">
       <h1><a href="index.html">식물</a></h1>
 <div id="grid">
       <ul>
-          <li><a href="1.html" style="color:red; text-decoration:underline">베고니아</a></li>
+          <li><a href="1.html">베고니아</a></li>
           <li><a href="2.html">제라늄</a></li>
           <li><a href="3.html">수국</a></li>
       </ul>
